--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "9.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.7",
+    "@types/react": "^16.9.51",
+    "typescript": "^4.0.3"
   }
 }
