--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "next": "9.5.4",
+    "prettier": "^2.1.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swagger-jsdoc": "^4.2.3",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "^14.11.7",
     "@types/react": "^16.9.51",
+    "@types/swagger-jsdoc": "^3.0.2",
     "typescript": "^4.0.3"
   }
 }
