--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "swagger": "node src/configs/initialize-swagger.js"
   },
   "dependencies": {
     "next": "9.5.4",
     "prettier": "^2.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "swagger-jsdoc": "^4.2.3",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-react": "^3.35.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.7",
     "@types/react": "^16.9.51",
-    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-react": "^3.23.3",
+    "swagger-jsdoc": "^4.2.3",
     "typescript": "^4.0.3"
   }
 }
